# PEEK

./: .gitignore  .gitmodules  PEEK_boxes.ipynb  README.md  Untitled.ipynb  YOLOv5 Demo.ipynb  pyproject.toml  requirements.txt  resize-images.ipynb
.ipynb_checkpoints/: PEEK_boxes-checkpoint.ipynb
SatelliteData/: data.yaml
SatelliteData/labels/: ceil_light_1_Color_1669859313319-22583007812500_png.rf.746d8a23be1114e5d6b2dba891beafb2.txt  ceil_light_1_Color_1669859314820-81152343750000_png.rf.4bde2c4b41d2af4d98b71fcc1e47fb43.txt  low_light_2_Color_1669859044825-31079101562500_png.rf.9c695effb4cd9dac7d7d2acfb8fc7ddc.txt
SatelliteData_resized/: data.yaml
SatelliteData_resized/labels/: ceil_light_1_Color_1669859309517-34350585937500_png.rf.5df5a98f65a1cce87e96c35c229a325a.txt  ceil_light_1_Color_1669859309917-51611328125000_png.rf.b5997deee50779f61122330e8b754a60.txt  ceil_light_1_Color_1669859316322-24291992187500_png.rf.0c894c7ba0010c7f313620e315a8ce60.txt  low_light_2_Color_1669859038421-07104492187500_png.rf.74646d46d85991cc7d78741e71c5ee7f.txt  low_light_2_Color_1669859041356-64233398437500_png.rf.9f2f6e08be7ef6cd0af0c346a67c0c1d.txt  low_light_2_Color_1669859043591-33178710937500_png.rf.78cd2559b6b1f12f7be257cabe8dafd4.txt  low_light_2_Color_1669859045825-76049804687500_png.rf.0ee64cc07e10d4d06ece57fb8c91e0ad.txt
notebooks/: Ultralytics_Demo.ipynb  YOLOv5_Demo.ipynb  YOLOv8_Demo.ipynb
peek/: __init__.py  core.py  functions.py  functions2.py  plotting.py  weights.py
peek/extractors/: __init__.py  hooks.py  ultralytics.py  yolov5.py
yolov5/: detect.py
(+2 files in other folders)
