[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peek"
version = "0.1.0"
description = "PEEK utilities + latent extraction helpers for vendored YOLO repos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy<2",
  "scipy>=1.4.1",
  "matplotlib>=3.3.0",
  "opencv-python>=4.6.0",
  "pillow>=7.1.2",
  "pyyaml>=5.3.1",
  "requests>=2.23.0",
  "psutil>=5.8.0",
  "polars>=0.20.0",
  "ultralytics-thop>=2.0.18",
  "tomli>=2.0.1; python_version < '3.11'",
  "torch>=1.8.0",
  "torchvision>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "jupyter",
  "pytest",
]

[tool.setuptools]
# If your package directory is literally "peek/"
packages = ["peek"]
